--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,3 +1,1 @@
-<li *ngFor="let product of products">
-  {{product.albumName}}
-</li>
+<ul><li *ngFor="let product of products">{{product.albumName}}</li></ul>
