--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,1 +1,1 @@
-<ul><li *ngFor="let product of products"><a routerLink="/product/{{product.id}}" routerLink="active">{{product.albumName}}</a></li></ul>
+<ul><li *ngFor="let product of products"><a routerLink="/product/{{product.id}}" routerLinkActive="active">{{product.albumName}}</a></li></ul>
